--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "csrf-csrf": "^2.2.4",
     "express": "^4.18.2",
     "express-csrf-double-submit-cookie": "^1.2.1",
+    "express-flash": "0.0.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
+    "message": "0.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3"
